[gd_scene load_steps=4 format=3 uid="uid://ckbgovq51fluy"]

[ext_resource type="Script" uid="uid://6q8tjhg2pvx" path="res://script/button.gd" id="1_mi6dp"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_n4pas"]

[sub_resource type="CylinderMesh" id="CylinderMesh_mi6dp"]

[node name="button" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("1_mi6dp")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_n4pas")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_mi6dp")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
